It's starting to look like a slide deck!

--- a/res/templates/deck.html
+++ b/res/templates/deck.html
@@ -29,8 +29,8 @@
 
         </article>
 
-        <nav>
-            <ul>
+        <nav class='page-nav'>
+            <ul class='nav-buttons'>
                 <li><button id='prev-slide'>prev</button></li>
                 <li><button id='next-slide'>next</button></li>
             </ul>
