--- a/res/style/core.css
+++ b/res/style/core.css
@@ -1,4 +1,23 @@
 
 section.slide {
     border: 2px solid blue;
+    width: 760px;
+    height: 560px;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
 }
+
+nav.page-nav {
+    width: 760px;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+nav.page-nav ul.nav-buttons li {
+    display: inline;
+}
+
+
