Working on organizing resources a bit better for overriding with themes.

--- a/res/templates/deck.html
+++ b/res/templates/deck.html
@@ -48,5 +48,15 @@
         </script>
         {% endfor %}
 
+        
+        <script type='text/javascript'>
+        //<![CDATA[
+        // Page specific javascript
+
+        Slider.useAsPrevSlideButton('#prev-slide').useAsNextSlideButton('#next-slide');
+        
+        //]]>
+        </script>
+
     </body>
 </html>
