--- a/res/style/core.css
+++ b/res/style/core.css
@@ -1,12 +1,24 @@
 
-section.slide {
+.presentation {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    border: 0;
+    position: relative;
+}
+
+.presentation .buffer {
+    display: inline-block;
+    border: 1px solid grey;
+}
+
+.presentation .slide {
     border: 2px solid blue;
-    width: 760px;
-    height: 560px;
-    padding: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5%;
+    width: 260px;
+    height: 260px;
+    padding: 10px;
+    margin: 10px;
 }
 
 nav.page-nav {
