Decent animation start, sliding in from the right, out to the left.

--- a/res/style/core.css
+++ b/res/style/core.css
@@ -19,6 +19,11 @@
     height: 260px;
     padding: 10px;
     margin: 10px;
+    position: absolute;
+}
+
+.presentation .slide._incoming {
+    left: 100%;
 }
 
 nav.page-nav {
