--- a/res/style/core.css
+++ b/res/style/core.css
@@ -7,11 +7,10 @@ html, body {
 
 .presentation {
     width: 100%;
-    min-height: 100%;
+    height: 100%;
     padding: 0;
     margin: 0;
-    border: 2px solid black;
-    position: relative;
+    position: fixed;
 }
 
 .presentation .buffer {
@@ -25,25 +24,23 @@ html, body {
 
 .presentation .buffer .slide {
     border: 2px solid blue;
-    width: 260px;
-    height: 260px;
+    width: 720px;
+    height: 560px;
     padding: 10px;
     margin: 10px auto;
 }
 
 .buffer._incoming .slide {
-    border: 2px solid yellow;
 }
 
 .buffer._outgoing .slide {
-    border: 2px solid red;
 }
 
 nav.page-nav {
-    width: 760px;
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
     padding: 20px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 nav.page-nav ul.nav-buttons li {
